--- a/public/grading.html
+++ b/public/grading.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IELTS Writing Task 2 Grading | Writing AI Hub</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdn.replit.com/agent/bootstrap-agent-dark-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* Any page-specific styles can go here */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            background-color: var(--light-background);
+        }
         
         .content-container {
             max-width: 1200px;
@@ -199,15 +204,20 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="site-header">
-        <div class="logo">
-            <a href="/"><i class="fas fa-globe"></i> Writing AI Hub</a>
+    <header>
+        <div class="container header-container">
+            <a href="/" class="logo">
+                <i class="fas fa-globe"></i>
+                Writing AI Hub
+            </a>
+            <div class="nav-menu">
+                <div class="nav-links">
+                    <a href="/" class="nav-link">Home</a>
+                    <a href="/workflow_1_question" class="nav-link">Practice</a>
+                </div>
+                <a href="/account.html" class="btn btn-account">My Account</a>
+            </div>
         </div>
-        <nav class="nav-menu">
-            <a href="/" class="nav-link">Home</a>
-            <a href="/workflow_1_question" class="nav-link">Practice</a>
-            <a href="/my_account" class="account-button">My Account</a>
-        </nav>
     </header>
 
     <!-- Main Content -->
@@ -305,9 +315,15 @@
     </div>
 
     <!-- Footer -->
-    <footer class="site-footer">
-        <div class="footer-text">
-            © 2025 Writing AI Hub | AI-powered Practice and Grading
+    <footer>
+        <div class="container footer-container">
+            <a href="/" class="footer-logo">
+                <i class="fas fa-globe"></i>
+                Writing AI Hub
+            </a>
+            <div class="copyright">
+                © 2025 Writing AI Hub. All rights reserved.
+            </div>
         </div>
     </footer>
     
