Update full app

--- a/public/progress-coming-soon.html
+++ b/public/progress-coming-soon.html
@@ -101,12 +101,13 @@
     </style>
 </head>
 <body>
+    <div class="body-wrapper">
     <!-- Header -->
-    <header>
+        <header class="app-header">
         <div class="container header-container">
             <a href="/" class="logo">
                 <i class="fas fa-globe"></i>
-                Writing AI Hub
+                Writing AI-Hub
             </a>
             <div class="nav-menu">
                 <div class="nav-links">
@@ -120,6 +121,7 @@
 
     <!-- Coming Soon Section -->
     <section class="coming-soon-page">
+            <main class="main">
         <div class="container">
             <div class="coming-soon-icon">
                 <i class="fas fa-chart-line"></i>
@@ -144,17 +146,19 @@
             
             <a href="/" class="btn">Return Home</a>
         </div>
+            </main>
     </section>
+    </div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="app-footer">
         <div class="container footer-container">
             <a href="/" class="footer-logo">
                 <i class="fas fa-globe"></i>
-                Writing AI Hub
+                Writing AI-Hub
             </a>
             <div class="copyright">
-                © 2025 Writing AI Hub. All rights reserved.
+                © 2025 Writing AI-Hub. All rights reserved.
             </div>
         </div>
     </footer>
