--- a/public/account.html
+++ b/public/account.html
@@ -69,12 +69,13 @@
     </style>
 </head>
 <body>
+    <div class="body-wrapper">
     <!-- Header -->
-    <header>
+        <header class="app-header">
         <div class="container header-container">
             <a href="/" class="logo">
                 <i class="fas fa-globe"></i>
-                Writing AI Hub
+                Writing AI-Hub
             </a>
             <div class="nav-menu">
                 <div class="nav-links">
@@ -88,6 +89,7 @@
 
     <!-- Account Content -->
     <section class="account-section">
+            <main class="main">
         <div class="container">
             <div class="account-container">
                 <a href="/" class="back-link"><i class="fas fa-arrow-left"></i> Back to Home</a>
@@ -101,17 +103,19 @@
                 </div>
             </div>
         </div>
+            </main>
     </section>
+    </div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="app-footer">
         <div class="container footer-container">
             <a href="/" class="footer-logo">
                 <i class="fas fa-globe"></i>
-                Writing AI Hub
+                Writing AI-Hub
             </a>
             <div class="copyright">
-                © 2025 Writing AI Hub. All rights reserved.
+                © 2025 Writing AI-Hub. All rights reserved.
             </div>
         </div>
     </footer>
