--- a/public/vocabulary-coming-soon.html
+++ b/public/vocabulary-coming-soon.html
@@ -81,8 +81,9 @@
     </style>
 </head>
 <body>
+    <div class="body-wrapper">
     <!-- Header -->
-    <header>
+        <header class="app-header">
         <div class="container header-container">
             <a href="/" class="logo">
                 <i class="fas fa-globe"></i>
@@ -100,6 +101,7 @@
 
     <!-- Coming Soon Section -->
     <section class="coming-soon-page">
+            <main class="main">
         <div class="container">
             <div class="coming-soon-icon">
                 <i class="fas fa-book-open"></i>
@@ -120,10 +122,12 @@
             
             <a href="/" class="btn">Return Home</a>
         </div>
+            </main>
     </section>
+    </div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="app-footer">
         <div class="container footer-container">
             <a href="/" class="footer-logo">
                 <i class="fas fa-globe"></i>
